finito sezione developer

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <img src="img/cluster.svg" alt="">
                         </div>
                         <div class="testodeploy">
-                              <h4>cluister deploiment</h4>
+                              <h4>Cluister deploiment</h4>
                               <h6>Provision multiple drfoplets (virtual <br>
                                 machines) in second with our control <br>
                                 panel, CLI or directly  against or API.
@@ -184,24 +184,22 @@
                             <img src="img/optimized.svg" alt="">
                         </div>
                         <div class="testodeploy">
-                              <h4>cluister deploiment</h4>
-                              <h6>Provision multiple drfoplets (virtual <br>
-                                machines) in second with our control <br>
-                                panel, CLI or directly  against or API.
+                              <h4>Global Availability</h4>
+                              <h6> Deploy to any of our data center regions <br>
+                               around the world.
                               </h6>
                         </div>
                       </div>
-
-
                       <div class=" col-xs-12 col-md-6 bottom left">
                         <div class="logo_deploy">
                             <img src="img/one-click.svg" alt="">
                         </div>
                         <div class="testodeploy">
-                              <h4>cluister deploiment</h4>
-                              <h6>Provision multiple drfoplets (virtual <br>
-                                machines) in second with our control <br>
-                                panel, CLI or directly  against or API.
+                              <h4>One-click Apss</h4>
+                              <h6>Skip the install and configuration process <br>
+                                with pre-built open source images <br>
+                                supporting Rails, Cassandra,Doker and br
+                                more.
                               </h6>
                         </div>
                       </div>
@@ -221,7 +219,41 @@
                  </div>
                  </div>
                </div>
+                  <!-- FINE SEZIONE DEPLOY  -->
 
+                  <!-- INIZIO DESIGNED FOR DEVELOPER -->
+
+                    <div class="DESIGNED_FOR_DEV">
+
+                        <div class="col-xs-12 col-md-12 col-sm-12 text-center dev">
+                            <h2>Designed for developer</h2>
+                            <span>Build more adn spend less time managing your infrastucture with our easy-to-use control panel and API. </span>
+                        </div>
+                        <div class="img_dev col-xs-12 col-md-12 -col-sm-12">
+
+
+
+                                 <div class="col-xs-2 col-md-2 col-sm-2 text-right chevron_left">
+                                      <a href="#"><i class="fas fa-chevron-left"></i></a>
+                                 </div>
+                                 <div class="col-xs-8 col-md-8 col-sm-8 img_dep_dev ">
+                                      <img src="img/screen.jpg" alt="">
+                                 </div>
+                                 <div class="col-xs-2 col-md-2 col-sm- text-center chevron_right">
+                                      <a href="#"><i class="fas fa-chevron-right"></i></a>
+                                 </div>
+
+
+
+                        </div>
+                      <div class="text-center">
+                        <h4>Create a compute servers in 55second or less.</h4>
+                      </div>
+                        <div class="text-center circle">
+                            <i class="far fa-circle"></i><i class="far fa-circle"></i><i class="far fa-circle"></i><i class="far fa-circle"></i>
+                        </div>
+                    </div>
+                        <!-- fine for developer  -->
 
   </body>
 </html>
