--- a/index.html
+++ b/index.html
@@ -229,23 +229,22 @@
                             <h2>Designed for developer</h2>
                             <span>Build more adn spend less time managing your infrastucture with our easy-to-use control panel and API. </span>
                         </div>
-                        <div class="img_dev col-xs-12 col-md-12 -col-sm-12">
-
-
-
-                                 <div class="col-xs-2 col-md-2 col-sm-2 text-right chevron_left">
-                                      <a href="#"><i class="fas fa-chevron-left"></i></a>
-                                 </div>
-                                 <div class="col-xs-8 col-md-8 col-sm-8 img_dep_dev ">
-                                      <img src="img/screen.jpg" alt="">
-                                 </div>
-                                 <div class="col-xs-2 col-md-2 col-sm- text-center chevron_right">
-                                      <a href="#"><i class="fas fa-chevron-right"></i></a>
-                                 </div>
-
-
-
+                        <div class="wrapper90 imgdev">
+                        <div class="row">
+                          <div class="wrapper90 ">
+                          <div class="col-xs-2 col-sm-2 col-md-2 posizione text-center chevron">
+                            <a href="#"><i class="fas fa-chevron-left"></i></a>
+                          </div>
+                          <div class="col-xs-8 col-sm-8 col-md-8 posizione ">
+                              <img src="img/screen.jpg" alt="">
+                          </div>
+                          <div class="col-xs-2 col-sm-2 col-md-2 posizione text-center chevron">
+                            <a href="#"><i class="fas fa-chevron-right"></i></a>
+                          </div>
                         </div>
+                        </div>
+                        </div>
+
                       <div class="text-center">
                         <h4>Create a compute servers in 55second or less.</h4>
                       </div>
@@ -254,6 +253,266 @@
                         </div>
                     </div>
                         <!-- fine for developer  -->
+                        <!-- inizio business features  -->
+
+                        <div class="features container-fluid">
+                          <div class="row">
+                            <div class="col-xs-12 col-md-12 col-sm-12 text-center">
+                                  <h2>The features your business needs</h2>
+                            </div>
+                            <div class="wrap_80 centrale">
+                              <div class="row">
+                                <div class="col-xs-12 col-sm-4 col-md-4 l">
+                                   <img src="img/precing.svg" alt="">
+                                   <h4>Predictable pricing</h4>
+                                   <span>Leave complex pricing structures behind. Alwais<br>
+                                        know what you'll pay per month with a flat, <br>
+                                        industry-leading pricing structure.
+                                      </span><br>
+                                      <a href="#">Pricing ></a>
+                                </div>
+                                <div class="col-xs-12 col-sm-4 col-md-4 m">
+                                <img src="img/world-class.svg" alt="">
+                                <h4>Word-call services</h4>
+                                <span>
+                                  Free round-the-clock technical support for all <br>
+                                  customers you'll feel the love.
+                                </span> <br>
+                                <a href="#">Support ></a>
+                                </div>
+                                <div class="col-xs-12 col-sm-4 col-md-4 d">
+                                  <img src="img/reliable.svg" alt="">
+                                  <h4>Reliable platform</h4>
+                                  <span>
+                                    More than 100,000 developer teams worlwide <br>
+                                    trust DigitalOceans to support their business with <br>
+                                    a 99.99% uptime SLA for all services.
+                                  </span><br>
+                                  <a href="#">Security ></a>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <!-- fine sezione features e business  -->
+
+                        <!-- inizio dodici regions -->
+          <div class="container-fluid dodici_region">
+             <div class="row text-center">
+               <h2>Service your customers around the world  from 12 regions.</h2>
+             </div>
+               <div class="wrap_80 green">
+                <div class="col-xs-12 col-sm-6 col-md-6 dodici_left">
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      AMS2
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Amsterdam, Netherlands
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      AMS3
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Amsterdam, Netherlands
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      BLR1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Bangalore, India
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                       <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      FRA1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Frankfurt, German
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      LON1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        London, Uk
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      NYC1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        New York, Usa
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4  text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+
+                  </div>
+                </div>
+                     <!-- dodici parte destra -->
+
+                <div class="col-xs-12 col-sm-6 col-md-6 dodici_right">
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      AMS2
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Amsterdam, Netherlands
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      AMS3
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Amsterdam, Netherlands
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      BLR1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Bangalore, India
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                       <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      FRA1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        Frankfurt, German
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      LON1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        London, Uk
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4 text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                    <hr>
+                  </div>
+
+                  <div class="row">
+                    <div class="col-xs-2 col-sm-2 col-md-2">
+                      NYC1
+                    </div>
+                    <div class="col-xs-6 col-sm-6 col-md-6">
+                        New York, Usa
+                    </div>
+                    <div class="col-xs-4 col-sm-4 col-md-4  text-right">
+                      <a href="#">Test Speed ></a>
+                    </div>
+                  </div>
+                </div>
+               </div>
+            </div>
+
+            <!-- fine dodici region -->
+
+            <!-- inizio roketbox  -->
+
+              <div class="DESIGNED_FOR_DEV">
+                  <div class="col-xs-12 col-md-12 col-sm-12 text-center dev">
+                      <h2>development teams love DigitaOcean</h2>
+                  </div>
+                  <div class="wrapper90 imgdev">
+                  <div class="row">
+                    <div class="wrapper90 ">
+                    <div class="col-xs-2 col-sm-2 col-md-2  text-center chevron">
+                      <a href="#"><i class="fas fa-chevron-left"></i></a>
+                    </div>
+                    <div class="col-xs-8 col-sm-8 col-md-8 posizione2 ">
+                        <div class="roket text-center">
+                          <h2>rokerbox</h2>
+                        </div>
+                        <div id="testo">
+                          <div class="row">
+                            <h3 class="text-center">We have been able to make scaling <br>
+                            the technical infrastructure of our <br>
+                          business cost effective <br>
+                           and efficient. </h3>
+                          </div>
+                        </div>
+                        <div class="row text-center read ">
+                          <h4 class="sub">Rick O'Toole</h4>
+                          <h5>Co-founder and CTO</h5>
+                          <a href="">Read Story ></a>
+                        </div>
+                    </div>
+                    <div class="col-xs-2 col-sm-2 col-md-2  text-center chevron">
+                      <a href="#"><i class="fas fa-chevron-right"></i></a>
+                    </div>
+                  </div>
+                  </div>
+                  </div>
+                  <div class="text-center circle circolo">
+                      <i class="far fa-circle"></i><i class="far fa-circle"></i><i class="far fa-circle"></i>
+                  </div>
+              </div>
+               <!-- fine <rocketbox></rocketbox> -->
+               <div class="container-fluid prefooter">
+                  <div class="row text-center">
+                      <h2>Get started now.</h2>
+                  </div>
+                  <div class="row text-center">
+                      <button id="account"type="submit" class="btn btn-primary"><a href="#">Create your Account</a></button>
+                  </div>
+               </div>
 
   </body>
 </html>
